docs: migrate tax provider guide to reference

--- a/www/apps/docs/content/references/fulfillment/classes/fulfillment.AbstractFulfillmentService.mdx
+++ b/www/apps/docs/content/references/fulfillment/classes/fulfillment.AbstractFulfillmentService.mdx
@@ -7,7 +7,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
 
 # How to Create a Fulfillment Provider
 
-In this document, you’ll learn how to create a fulfillment provider to a Medusa backend and the methods you must implement in it. If you’re unfamiliar with the Shipping architecture in Medusa, make sure to [check out the overview first](https://docs.medusajs.com/modules/carts-and-checkout/shipping).
+In this document, you’ll learn how to create a fulfillment provider in the Medusa backend and the methods you must implement in it. If you’re unfamiliar with the Shipping architecture in Medusa, make sure to [check out the overview first](https://docs.medusajs.com/modules/carts-and-checkout/shipping).
 
 ## Overview
 
