--- a/www/apps/docs/content/references/services/classes/services.TaxProviderService.mdx
+++ b/www/apps/docs/content/references/services/classes/services.TaxProviderService.mdx
@@ -229,7 +229,7 @@ Retrieves the relevant tax provider for the given region.
 
 #### Returns
 
-<ParameterTypes parameters={[{"name":"ITaxService","type":"`object`","description":"Interface to be implemented by tax provider plugins. The interface defines a\nsingle method `getTaxLines` that returns numerical rates to apply to line\nitems and shipping methods.","optional":false,"defaultValue":"","expandable":false,"children":[]}]} />
+<ParameterTypes parameters={[{"name":"ITaxService","type":"`object`","description":"## Overview\n\nA tax provider is used to retrieve the tax lines in a cart. The Medusa backend provides a default `system` provider. You can create your own tax provider,\neither in a plugin or directly in your Medusa backend, then use it in any region.\n\nA tax provider class is defined in a TypeScript or JavaScript file under the `src/services` directory and the class must extend the\n`AbstractTaxService` class imported from `@medusajs/medusa`. The file's name is the tax provider's class name as a slug and without the word `Service`.\n\nFor example, you can create the file `src/services/my-tax.ts` with the following content:\n\n```ts title=\"src/services/my-tax.ts\"\nimport {\n  AbstractTaxService,\n  ItemTaxCalculationLine,\n  ShippingTaxCalculationLine,\n  TaxCalculationContext,\n} from \"@medusajs/medusa\"\nimport {\n  ProviderTaxLine,\n} from \"@medusajs/medusa/dist/types/tax-service\"\n\nclass MyTaxService extends AbstractTaxService {\n  async getTaxLines(\n    itemLines: ItemTaxCalculationLine[],\n    shippingLines: ShippingTaxCalculationLine[],\n    context: TaxCalculationContext):\n    Promise<ProviderTaxLine[]> {\n    throw new Error(\"Method not implemented.\")\n  }\n}\n\nexport default MyTaxService\n```\n\n---\n\n## Identifier Property\n\nThe `TaxProvider` entity has 2 properties: `identifier` and `is_installed`. The `identifier` property in the tax provider service is used when the tax provider is added to the database.\n\nThe value of this property is also used to reference the tax provider throughout Medusa. For example, it is used to [change the tax provider](https://docs.medusajs.com/modules/taxes/admin/manage-tax-settings#change-tax-provider-of-a-region) to a region.\n\n```ts title=\"src/services/my-tax.ts\"\nclass MyTaxService extends AbstractTaxService {\n  static identifier = \"my-tax\"\n  // ...\n}\n```\n\n---","optional":false,"defaultValue":"","expandable":false,"children":[]}]} />
 
 ___
 
