--- a/www/apps/docs/content/references/medusa/classes/medusa.AbstractFulfillmentService.mdx
+++ b/www/apps/docs/content/references/medusa/classes/medusa.AbstractFulfillmentService.mdx
@@ -229,7 +229,7 @@ class MyFulfillmentService extends AbstractFulfillmentService {
   // ...
   async createFulfillment(
     data: Record<string, unknown>,
-    items: LineItem,
+    items: LineItem[],
     order: Order,
     fulfillment: Fulfillment
   ) {
