--- a/www/apps/docs/content/references/medusa/interfaces/medusa.FulfillmentService.mdx
+++ b/www/apps/docs/content/references/medusa/interfaces/medusa.FulfillmentService.mdx
@@ -200,7 +200,7 @@ class MyFulfillmentService extends AbstractFulfillmentService {
   // ...
   async createFulfillment(
     data: Record<string, unknown>,
-    items: LineItem,
+    items: LineItem[],
     order: Order,
     fulfillment: Fulfillment
   ) {
