--- a/www/apps/docs/content/references/payment/classes/payment.AbstractPaymentProcessor.mdx
+++ b/www/apps/docs/content/references/payment/classes/payment.AbstractPaymentProcessor.mdx
@@ -633,3 +633,31 @@ ___
 #### Returns
 
 <ParameterTypes parameters={[{"name":"boolean","type":"`boolean`","optional":false,"defaultValue":"","description":"","expandable":false,"children":[]}]} />
+
+---
+
+## Test Implementation
+
+:::note
+
+If you created your payment processor in a plugin, refer to [this guide on how to test plugins](https://docs.medusajs.com/development/plugins/create#test-your-plugin).
+
+:::
+
+After finishing your payment processor implementation:
+
+1\. Run the `build` command in the root of your Medusa backend:
+
+```bash npm2yarn
+npm run build
+```
+
+2\. Start the backend with the `develop` command:
+
+```bash
+npx medusa develop
+```
+
+3\. Enable your payment processor in one or more regions. You can do that either using the [Admin APIs](https://docs.medusajs.com/api/admin#regions_postregionsregionfulfillmentproviders) or the [Medusa Admin](https://docs.medusajs.com/user-guide/regions/providers#manage-fulfillment-providers).
+
+4\. There are different ways to test out your payment processor, such as authorizing payment on order completion or capturing payment of an order. You test payment in a checkout flow either using the [Next.js starter](https://docs.medusajs.com/starters/nextjs-medusa-starter) or [using Medusa's APIs and clients](https://docs.medusajs.com/modules/carts-and-checkout/storefront/implement-checkout-flow).
