docs: improve admin documentation

--- a/www/apps/docs/content/troubleshooting/create-medusa-app-errors.mdx
+++ b/www/apps/docs/content/troubleshooting/create-medusa-app-errors.mdx
@@ -7,7 +7,7 @@ import OtherErrors from './create-medusa-app-errors/_other-errors.mdx'
 import InvalidTokenError from './create-medusa-app-errors/_no-browser-token-error.md'
 import DockerSection from "./database-errors/_docker.md"
 import DbUrlError from './create-medusa-app-errors/_db-url-error.md'
-import PortError from './create-medusa-app-errors/_port.md'
+import ForwardingError from './create-medusa-app-errors/_forwarding_.md'
 
 ## TypeError: cmd is not a function
 
@@ -15,9 +15,9 @@ import PortError from './create-medusa-app-errors/_port.md'
 
 ---
 
-## Admin Login or User Errors
+## Errors when using VSCode or GitHub Codespaces
 
-<PortError />
+<ForwardingError />
 
 ---
 
