fix incorrect command

--- a/www/apps/docs/content/admin/configuration.mdx
+++ b/www/apps/docs/content/admin/configuration.mdx
@@ -231,8 +231,8 @@ The `develop` command in the admin CLI allows you to run the admin dashboard in 
 
 You can add the following options to the `medusa-admin develop` command:
 
-- `--backend` or `-b`: a string specifying the URL of the Medusa backend. By default, it's the value of the environment variable `MEDUSA_ADMIN_BACKEND_URL`. For example, `medusa-admin dev --backend example.com`.
-- `--port` or `-p`: the port to run the admin on. By default, it's `7001`. For example, `medusa-admin dev --port 8000`.
+- `--backend` or `-b`: a string specifying the URL of the Medusa backend. By default, it's the value of the environment variable `MEDUSA_ADMIN_BACKEND_URL`. For example, `medusa-admin develop --backend example.com`.
+- `--port` or `-p`: the port to run the admin on. By default, it's `7001`. For example, `medusa-admin develop --port 8000`.
 
 ---
 
