--- a/www/apps/docs/content/references/tax_calculation/classes/tax_calculation.AbstractTaxCalculationStrategy.mdx
+++ b/www/apps/docs/content/references/tax_calculation/classes/tax_calculation.AbstractTaxCalculationStrategy.mdx
@@ -1,5 +1,6 @@
 ---
 displayed_sidebar: modules
+slug: /modules/taxes/backend/tax-calculation-strategy
 ---
 
 import ParameterTypes from "@site/src/components/ParameterTypes"
