fix content-lint error

--- a/www/apps/docs/content/admin/configuration.mdx
+++ b/www/apps/docs/content/admin/configuration.mdx
@@ -30,7 +30,7 @@ const plugins = [
         logLevel: "error",
         stats: "normal",
         allowedHosts: "auto",
-        webSocketURL: undefined
+        webSocketURL: undefined,
       },
     },
   },
