--- a/packages/admin-next/dashboard/public/locales/en/translation.json
+++ b/packages/admin-next/dashboard/public/locales/en/translation.json
@@ -4,6 +4,7 @@
     "ascending": "Ascending",
     "descending": "Descending",
     "cancel": "Cancel",
+    "close": "Close",
     "save": "Save",
     "create": "Create",
     "delete": "Delete",
@@ -29,6 +30,7 @@
     "enabled": "Enabled",
     "disabled": "Disabled",
     "active": "Active",
+    "revoke": "Revoke",
     "revoked": "Revoked",
     "remove": "Remove",
     "admin": "Admin",
@@ -130,6 +132,19 @@
     "editUser": "Edit User",
     "inviteUser": "Invite User",
     "inviteUserHint": "Invite a new user to your store.",
+    "sendInvite": "Send invite",
+    "pendingInvites": "Pending Invites",
+    "revokeInviteWarning": "You are about to revoke the invite for {{email}}. This action cannot be undone.",
+    "resendInvite": "Resend invite",
+    "copyInviteLink": "Copy invite link",
+    "expiredOnDate": "Expired on {{date}}",
+    "validFromUntil": "Valid from <0>{{from}}</0> - <1>{{until}}</1>",
+    "acceptedOnDate": "Accepted on {{date}}",
+    "inviteStatus": {
+      "accepted": "Accepted",
+      "pending": "Pending",
+      "expired": "Expired"
+    },
     "roles": {
       "admin": "Admin",
       "developer": "Developer",
@@ -248,6 +263,7 @@
     "total": "Total",
     "created": "Created",
     "key": "Key",
-    "role": "Role"
+    "role": "Role",
+    "sent": "Sent"
   }
 }
