--- a/www/apps/docs/content/plugins/notifications/sendgrid.mdx
+++ b/www/apps/docs/content/plugins/notifications/sendgrid.mdx
@@ -131,7 +131,7 @@ The keys you add should also be present in the context field of the cart under t
 
 ### Custom Templates
 
-Aside from the templates defined in the [reference](#template-reference) section, you may specify templates for Medusa defined or custom events.
+Aside from the supported templates defined in the [reference](#template-reference) section, you may specify templates for Medusa defined or custom events.
 
 For example:
 
