--- a/www/apps/docs/content/references/js_client/classes/js_client.AdminUsersResource.mdx
+++ b/www/apps/docs/content/references/js_client/classes/js_client.AdminUsersResource.mdx
@@ -186,13 +186,15 @@ Retrieve all admin users.
 
 To list users:
 
+```ts
 import Medusa from "@medusajs/medusa-js"
-const medusa = new Medusa(&#123; baseUrl: MEDUSA\_BACKEND\_URL, maxRetries: 3 &#125;)
+const medusa = new Medusa({ baseUrl: MEDUSA_BACKEND_URL, maxRetries: 3 })
 // must be previously logged in or use api token
 medusa.admin.users.list()
-.then((&#123; users &#125;) =&#62; &#123;
+.then(({ users }) => {
   console.log(users.length);
-&#125;)
+})
+```
 
 By default, only the first `20` users are returned. You can control pagination by specifying the `limit` and `offset` properties:
 
