fix: updated russian tranlation file

--- a/packages/admin-ui/ui/public/locales/ru/translation.json
+++ b/packages/admin-ui/ui/public/locales/ru/translation.json
@@ -1915,5 +1915,179 @@
   "users-the-team": "Команда",
   "users-manage-users-of-your-medusa-store": "Управляйте пользователями вашего магазина Medusa",
   "users-count_one": "{{count}}",
-  "users-count_other": "{{count}}"
+  "users-count_other": "{{count}}",
+  "filter-menu-clear-button": "Очистить",
+  "filter-menu-date-item-after": "До",
+  "filter-menu-date-item-before": "После",
+  "filter-menu-date-item-between": "Между",
+  "filter-menu-select-item-clear-button": "Очистить выбранные опции",
+  "filter-menu-select-item-default-placeholder": "Выберите фильтр",
+  "filter-menu-select-item-selected": "Выбрано",
+  "filter-menu-trigger": "Просмотр",
+  "price-list-add-products-modal-back-button": "Назад",
+  "price-list-add-products-modal-back-button-cancel": "Отмена",
+  "price-list-add-products-modal-error": "Произошла ошибка при подготовке формы. Перезагрузите страницу и попробуйте снова. Если проблема не исчезнет, повторите попытку позже.",
+  "price-list-add-products-modal-error-title": "Произошла ошибка",
+  "price-list-add-products-modal-missing-prices-description": "Цены не назначены для всех выбранных вами продуктов. Хотите продолжить?",
+  "price-list-add-products-modal-missing-prices-title": "Неполный прайс-лист",
+  "price-list-add-products-modal-next-button-continue": "Продолжить",
+  "price-list-add-products-modal-next-button-continue-save-prices": "Сохранить цены",
+  "price-list-add-products-modal-next-button-submit-and-close": "Отправить и закрыть",
+  "price-list-add-products-modal-no-prices-error": "Пожалуйста, установите цены хотя бы для одного продукта.",
+  "price-list-add-products-modal-prices-tab": "Редактировать цены",
+  "price-list-add-products-modal-products-tab": "Выбрать продукты",
+  "price-list-add-products-modal-success-message": "Новые цены были добавлены в прайс-лист.",
+  "price-list-add-products-modal-success-title": "Новые цены добавлены",
+  "price-list-details-drawer-cancel-button": "Отмена",
+  "price-list-details-drawer-notification-error-title": "Произошла ошибка",
+  "price-list-details-drawer-notification-success-message": "Прайс-лист успешно обновлен",
+  "price-list-details-drawer-prompt-description": "У вас есть несохраненные изменения, вы уверены, что хотите выйти?",
+  "price-list-details-drawer-prompt-title": "Вы уверены?",
+  "price-list-details-drawer-save-button": "Сохранить",
+  "price-list-details-drawer-title": "Редактировать детали прайс-листа",
+  "price-list-details-form-customer-groups-content-heading": "Группы клиентов",
+  "price-list-details-form-customer-groups-description": "Укажите, для каких групп клиентов должны применяться переопределения цен.",
+  "price-list-details-form-customer-groups-error": "Произошла ошибка при загрузке групп клиентов. Перезагрузите страницу и попробуйте снова. Если проблема не исчезнет, повторите попытку позже.",
+  "price-list-details-form-customer-groups-heading": "Доступность для клиентов",
+  "price-list-details-form-customer-groups-members": "Участники",
+  "price-list-details-form-customer-groups-name": "Название",
+  "price-list-details-form-customer-groups-no-groups": "Группы клиентов не найдены.",
+  "price-list-details-form-customer-groups-search-placeholder": "Поиск",
+  "price-list-details-form-dates-starts-at-description": "Запланируйте деактивацию переопределений цен в будущем.",
+  "price-list-details-form-dates-starts-at-heading": "Дата начала действия прайс-листа",
+  "price-list-details-form-dates-starts-at-label": "Дата начала",
+  "price-list-details-form-ends-at-description": "Запланируйте деактивацию переопределений цен в будущем.",
+  "price-list-details-form-ends-at-heading": "Дата окончания действия прайс-листа",
+  "price-list-details-form-ends-at-label": "Дата окончания",
+  "price-list-details-form-general-description": "Выберите заголовок и описание для прайс-листа.",
+  "price-list-details-form-general-description-label": "Описание",
+  "price-list-details-form-general-description-placeholder": "Цены на распродажу в Чёрную Пятницу...",
+  "price-list-details-form-general-heading": "Общие",
+  "price-list-details-form-general-name-label": "Название",
+  "price-list-details-form-general-name-placeholder": "Распродажа в Чёрную Пятницу",
+  "price-list-details-form-tax-inclusive-hint": "Выберите, чтобы все цены в этом списке были включены в налог.",
+  "price-list-details-form-tax-inclusive-label": "Цены с учетом налога",
+  "price-list-details-form-type-description": "Выберите тип прайс-листа, который вы хотите создать.",
+  "price-list-details-form-type-heading": "Тип",
+  "price-list-details-form-type-hint-override": "Используйте это, если вы переопределяете цены.",
+  "price-list-details-form-type-hint-sale": "Используйте это, если вы создаете распродажу.",
+  "price-list-details-form-type-label-override": "Переопределение",
+  "price-list-details-form-type-label-sale": "Распродажа",
+  "price-list-details-menu-item-delete": "Удалить",
+  "price-list-details-menu-item-edit": "Редактировать детали",
+  "price-list-details-notification-succes-title": "Прайс-лист обновлен",
+  "price-list-details-section-customer-groups": "Группы клиентов",
+  "price-list-details-section-delete-notification-error-title": "Не удалось удалить прайс-лист",
+  "price-list-details-section-delete-notification-success-message": "Прайс-лист \"{{name}}\" успешно удален",
+  "price-list-details-section-delete-notification-success-title": "Прайс-лист успешно удален",
+  "price-list-details-section-last-edited": "Последнее редактирование",
+  "price-list-details-section-number-of-prices": "Цены",
+  "price-list-details-section-prompt-cancel-text": "Отмена",
+  "price-list-details-section-prompt-confirm-text": "Удалить",
+  "price-list-details-section-prompt-description": "Вы уверены, что хотите удалить прайс-лист \"{{name}}\"?",
+  "price-list-details-section-prompt-title": "Удалить прайс-лист",
+  "price-list-details-section-status-active": "Активный",
+  "price-list-details-section-status-menu-draft": "Черновик",
+  "price-list-details-section-status-menu-expired": "Истекший",
+  "price-list-details-section-status-menu-item-activate": "Активировать",
+  "price-list-details-section-status-menu-item-draft": "Черновик",
+  "price-list-details-section-status-menu-notification-error-title": "Не удалось обновить статус прайс-листа",
+  "price-list-details-section-status-menu-notification-success-message": "Статус прайс-листа успешно обновлен на {{status}}",
+  "price-list-details-section-status-menu-notification-success-title": "Статус прайс-листа успешно обновлен",
+  "price-list-details-section-status-menu-scheduled": "Запланированный",
+  "price-list-edit-error": "Произошла ошибка при загрузке прайс-листа. Перезагрузите страницу и попробуйте снова. Если проблема не исчезнет, повторите попытку позже.",
+  "price-list-edit-prices-modal-back-button-back": "Назад",
+  "price-list-edit-prices-modal-back-button-cancel": "Отмена",
+  "price-list-edit-prices-modal-error-loading": "Произошла ошибка при подготовке формы. Перезагрузите страницу и попробуйте снова. Если проблема не исчезнет, повторите попытку позже.",
+  "price-list-edit-prices-modal-next-button-save": "Сохранить цены",
+  "price-list-edit-prices-modal-next-button-save-and-close": "Сохранить и закрыть",
+  "price-list-edit-prices-modal-notification-remove-error-description": "Некоторые цены не были обновлены правильно. Попробуйте снова.",
+  "price-list-edit-prices-modal-notification-remove-error-title": "Произошла ошибка",
+  "price-list-edit-prices-modal-notification-update-error": "Произошла ошибка",
+  "price-list-edit-prices-modal-notification-update-success-description": "Цены успешно обновлены",
+  "price-list-edit-prices-modal-notification-update-success-title": "Цены обновлены",
+  "price-list-edit-prices-modal-overview-tab": "Редактировать цены",
+  "price-list-edit-prices-modal-prompt-back-description": "У вас есть несохраненные изменения, вы уверены, что хотите вернуться?",
+  "price-list-edit-prices-modal-prompt-exit-description": "У вас есть несохраненные изменения, вы уверены, что хотите выйти?",
+  "price-list-edit-prices-modal-prompt-title": "Несохраненные изменения",
+  "price-list-new-form-back-button-back": "Назад",
+  "price-list-new-form-back-button-cancel": "Отмена",
+  "price-list-new-form-details-tab": "Создать прайс-лист",
+  "price-list-new-form-error-loading-products": "Произошла ошибка при подготовке формы. Перезагрузите страницу и попробуйте снова. Если проблема не исчезнет, повторите попытку позже.",
+  "price-list-new-form-missing-prices-title": "Неполный прайс-лист",
+  "price-list-new-form-next-button-continue": "Продолжить",
+  "price-list-new-form-next-button-save": "Сохранить цены",
+  "price-list-new-form-next-button-save-and-publish": "Сохранить и опубликовать",
+  "price-list-new-form-no-prices-error": "Пожалуйста, установите цены хотя бы для одного продукта.",
+  "price-list-new-form-notification-error-title": "Произошла ошибка",
+  "price-list-new-form-notification-success-message": "Прайс-лист успешно создан",
+  "price-list-new-form-notification-success-title": "Прайс-лист создан",
+  "price-list-new-form-prices-tab": "Редактировать цены",
+  "price-list-new-form-products-tab": "Выбрать продукты",
+  "price-list-new-form-prompt-back-description": "У вас есть несохраненные изменения, вы уверены, что хотите вернуться?",
+  "price-list-new-form-prompt-exit-description": "У вас есть несохраненные изменения, вы уверены, что хотите выйти?",
+  "price-list-new-form-prompt-title": "Вы уверены?",
+  "price-list-new-form-save-as-draft": "Сохранить как черновик",
+  "price-list-new-products-modal-missing-prices-description": "Цены не назначены для всех выбранных вами продуктов. Хотите продолжить?",
+  "price-list-prices-form-add-prices-button": "Добавить цены",
+  "price-list-prices-form-heading": "Редактировать цены",
+  "price-list-prices-form-prices": "Цены",
+  "price-list-prices-form-prices-count_one": "{{count}} цена",
+  "price-list-prices-form-prices-count_other": "{{count}} цены",
+  "price-list-prices-form-prices-variant-count_one": "{{count}} вариант",
+  "price-list-prices-form-prices-variant-count_other": "{{count}} вариантов",
+  "price-list-prices-form-products-error": "Произошла ошибка при подготовке формы. Перезагрузите страницу и попробуйте снова. Если проблема не исчезнет, повторите попытку позже.",
+  "price-list-prices-form-sku": "Артикул",
+  "price-list-prices-form-variant": "Вариант",
+  "price-list-prices-section-bar-count_one": "{{count}} выбран",
+  "price-list-prices-section-bar-count_other": "{{count}} выбрано",
+  "price-list-prices-section-delete-command": "Удалить",
+  "price-list-prices-section-delete-error-title": "Произошла ошибка",
+  "price-list-prices-section-delete-success-description_one": "Цены для {{count}} продукта успешно удалены",
+  "price-list-prices-section-delete-success-description_other": "Цены для {{count}} продуктов успешно удалены",
+  "price-list-prices-section-edit-command": "Редактировать",
+  "price-list-prices-section-heading": "Цены",
+  "price-list-prices-section-prices-menu-add": "Добавить продукты",
+  "price-list-prices-section-prices-menu-edit": "Редактировать цены",
+  "price-list-prices-section-prompt-description": "Это навсегда удалит цены продуктов из списка",
+  "price-list-prices-section-prompt-title": "Вы уверены?",
+  "price-list-prices-section-search-placeholder": "Поиск продуктов",
+  "price-list-prices-section-select-all-checkbox-label": "Выбрать все продукты на текущей странице",
+  "price-list-prices-section-select-checkbox-label": "Выбрать строку",
+  "price-list-prices-section-table-collection": "Коллекция",
+  "price-list-prices-section-table-load-error": "Произошла ошибка при получении продуктов. Попробуйте перезагрузить страницу или, если проблема не исчезнет, повторите попытку позже.",
+  "price-list-prices-section-table-product": "Продукт",
+  "price-list-prices-section-table-thumbnail-alt": "Миниатюра {{title}}",
+  "price-list-prices-section-table-variants": "Варианты",
+  "price-list-prices-secton-delete-success-title": "Цены удалены",
+  "price-list-product-filter-created-at": "Дата создания",
+  "price-list-product-filter-updated-at": "Дата обновления",
+  "price-list-product-prices-form-column-currencies-price-label": "Цена {{code}}",
+  "price-list-product-prices-form-column-product-label": "Продукт",
+  "price-list-product-prices-form-column-regions-price-label": "Цена {{name}} ({{code}})",
+  "price-list-product-prices-form-column-visibility-button": "Валюты",
+  "price-list-product-prices-form-column-visibility-currencies-label": "Валюты",
+  "price-list-product-prices-form-column-visibility-regions-label": "Регионы",
+  "price-list-product-prices-form-invalid-data-body": "Данные, которые вы вставили, содержат значения, которые не являются числами.",
+  "price-list-product-prices-form-invalid-data-title": "Неверные данные",
+  "price-list-products-form-collection-label": "Коллекция",
+  "price-list-products-form-error": "Произошла ошибка при загрузке продуктов. Перезагрузите страницу и попробуйте снова. Если проблема не исчезнет, повторите попытку позже.",
+  "price-list-products-form-heading": "Выберите продукты",
+  "price-list-products-form-inventory-label": "Наличие",
+  "price-list-products-form-inventory-value": "{{totalStock}} в наличии по {{variants}} вариантам",
+  "price-list-products-form-loading": "Загрузка продуктов",
+  "price-list-products-form-no-products": "Продукты не найдены.",
+  "price-list-products-form-product-label": "Продукт",
+  "price-list-products-form-product-thumbnail": "Миниатюра {{title}}",
+  "price-list-products-form-sales-channels-label": "Доступность",
+  "price-list-products-form-sales-channels-value": "{{first}} + еще {{remaining}}",
+  "price-list-products-form-search-placeholder": "Поиск",
+  "price-list-products-form-select-all": "Выбрать все продукты на текущей странице",
+  "price-list-products-form-select-row": "Выбрать строку",
+  "price-list-products-form-status-label": "Статус",
+  "product-attributes-section-height": "Высота",
+  "product-attributes-section-length": "Длина",
+  "product-attributes-section-title": "Атрибуты",
+  "product-attributes-section-weight": "Вес",
+  "product-attributes-section-width": "Ширина"
 }
