--- a/packages/admin-next/dashboard/public/locales/en/translation.json
+++ b/packages/admin-next/dashboard/public/locales/en/translation.json
@@ -104,7 +104,29 @@
     "deleteCustomerGroupWarning": "You are about to delete the customer group {{name}}. This action cannot be undone."
   },
   "orders": {
-    "domain": "Orders"
+    "domain": "Orders",
+    "paymentStatusLabel": "Payment Status",
+    "paymentStatus": {
+      "notPaid": "Not Paid",
+      "awaiting": "Awaiting",
+      "captured": "Captured",
+      "partiallyRefunded": "Partially Refunded",
+      "refunded": "Refunded",
+      "canceled": "Canceled",
+      "requresAction": "Requires Action"
+    },
+    "fulfillmentStatusLabel": "Fulfillment Status",
+    "fulfillmentStatus": {
+      "notFulfilled": "Not Fulfilled",
+      "partiallyFulfilled": "Partially Fulfilled",
+      "fulfilled": "Fulfilled",
+      "partiallyShipped": "Partially Shipped",
+      "shipped": "Shipped",
+      "partiallyReturned": "Partially Returned",
+      "returned": "Returned",
+      "canceled": "Canceled",
+      "requresAction": "Requires Action"
+    }
   },
   "draftOrders": {
     "domain": "Draft Orders"
