--- a/packages/admin-next/dashboard/public/locales/en/translation.json
+++ b/packages/admin-next/dashboard/public/locales/en/translation.json
@@ -4,9 +4,11 @@
     "ascending": "Ascending",
     "descending": "Descending",
     "cancel": "Cancel",
+    "close": "Close",
     "save": "Save",
     "create": "Create",
     "delete": "Delete",
+    "invite": "Invite",
     "edit": "Edit",
     "confirm": "Confirm",
     "add": "Add",
@@ -28,6 +30,7 @@
     "enabled": "Enabled",
     "disabled": "Disabled",
     "active": "Active",
+    "revoke": "Revoke",
     "revoked": "Revoked",
     "remove": "Remove",
     "admin": "Admin",
@@ -126,7 +129,22 @@
   },
   "users": {
     "domain": "Users",
-    "role": "Role",
+    "editUser": "Edit User",
+    "inviteUser": "Invite User",
+    "inviteUserHint": "Invite a new user to your store.",
+    "sendInvite": "Send invite",
+    "pendingInvites": "Pending Invites",
+    "revokeInviteWarning": "You are about to revoke the invite for {{email}}. This action cannot be undone.",
+    "resendInvite": "Resend invite",
+    "copyInviteLink": "Copy invite link",
+    "expiredOnDate": "Expired on {{date}}",
+    "validFromUntil": "Valid from <0>{{from}}</0> - <1>{{until}}</1>",
+    "acceptedOnDate": "Accepted on {{date}}",
+    "inviteStatus": {
+      "accepted": "Accepted",
+      "pending": "Pending",
+      "expired": "Expired"
+    },
     "roles": {
       "admin": "Admin",
       "developer": "Developer",
@@ -244,6 +262,8 @@
     "account": "Account",
     "total": "Total",
     "created": "Created",
-    "key": "Key"
+    "key": "Key",
+    "role": "Role",
+    "sent": "Sent"
   }
 }
